tests/ui/skip/duplicate_getters_3.stderr
error: encountered duplicate `#[skip]` attribute for field
 --> tests/ui/skip/duplicate_getters_3.rs:5:24
  |
5 |     #[skip(getters)] #[skip]
  |                        ^^^^

error: duplicate `#[skip]` here
 --> tests/ui/skip/duplicate_getters_3.rs:5:7
  |
5 |     #[skip(getters)] #[skip]
  |       ^^^^
